cabal-version:      3.0
name:               armyano
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Anton Gushcha
maintainer:         ncrashed@protonmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable armyano
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20
    hs-source-dirs:   app
    default-language: GHC2021
